ContactForm overflow fix, nav links fix & scrolling from nav links fixed

--- a/components/FormOverflow/FormOverflow.module.scss
+++ b/components/FormOverflow/FormOverflow.module.scss
@@ -34,6 +34,8 @@
 
   transition: transform 0.3s ease-in-out;
 
+  padding-top: 150px;
+
   @media (max-width: 950px) {
     padding: 15px 25px;
   }
@@ -44,6 +46,11 @@
     align-items: center;
 
     width: 500px;
+
+    .formSvg {
+      position: absolute;
+      top: 0;
+    }
 
     @media (max-width: 950px) {
       width: 350px;
@@ -58,8 +65,6 @@
 
     width: 300px;
 
-    position: relative;
-
     @media (max-width: 750px) {
       display: none;
     }
@@ -69,8 +74,6 @@
       flex-direction: column;
 
       margin-left: 30px;
-
-      margin-top: 130px;
 
       @media (max-width: 750px) {
         margin-left: 10px;
@@ -121,8 +124,8 @@
 
     .close {
       position: absolute;
-      top: 0;
-      right: 0;
+      top: 30px;
+      right: 35px;
 
       cursor: pointer;
     }
