--- a/components/Home/ContactForm/components/ContactForm.module.scss
+++ b/components/Home/ContactForm/components/ContactForm.module.scss
@@ -5,7 +5,7 @@
   align-items: center;
 
   margin-top: 20vh;
-  scroll-margin-top: 20vh;
+  scroll-margin-top: 25vh;
 
   height: 75vh;
   min-height: 500px;
